# Franka-warehouse-grasping

./: .gitignore  README.md  activate.sh
inference_server/server/: __init__.py  engine.py  runner.py  server.py
inference_server/server/config/: server.yaml
inference_server/server/models/: base_model.py  contact_graspnet_model.py
ros2_ws/src/franka_grasping/: package.xml  setup.cfg  setup.py
ros2_ws/src/franka_grasping/config/: grasp.yaml
ros2_ws/src/franka_grasping/franka_grasping/: __init__.py  grasp_node.py  grasp_selector.py  utils.py  visualization.py  zmq_client.py
ros2_ws/src/franka_grasping/launch/: grasp.launch.py
ros2_ws/src/franka_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/franka_interfaces/msg/: GraspCandidate.msg
ros2_ws/src/franka_manipulation/: CMakeLists.txt  package.xml
ros2_ws/src/franka_manipulation/include/franka_manipulation/: arm.hpp  executor.hpp  gripper.hpp  transforms.hpp  types.hpp
ros2_ws/src/franka_manipulation/launch/: manipulation.launch.py
ros2_ws/src/franka_manipulation/src/: arm.cpp  executor.cpp  gripper.cpp  main.cpp  moveit_smoke_test.cpp  transforms.cpp
ros2_ws/src/franka_perception/: package.xml  setup.py
ros2_ws/src/franka_perception/config/: camera.yaml  preprocessing.yaml
ros2_ws/src/franka_perception/franka_perception/: perception_node.py  preprocessing_node.py
ros2_ws/src/franka_perception/launch/: perception.launch.py  preprocessing.launch.py
ros2_ws/src/franka_perception/models/: overhead_camera.sdf
ros2_ws/src/franka_ros2/franka_fr3_moveit_config/rviz/: moveit.rviz
ros2_ws/src/franka_ros2/franka_gazebo/franka_gazebo_bringup/config/: franka_gazebo_controllers.yaml
ros2_ws/src/franka_warehouse_world/config/: scene.yaml
ros2_ws/src/franka_warehouse_world/launch/: warehouse.launch.py
ros2_ws/src/franka_warehouse_world/worlds/: warehouse_boxes_200x400x400.sdf  warehouse_boxes_test.sdf
shared/: grasp_type.py  protocol.py
