<?xml version="1.0"?>
<package format="3">
  <name>franka_perception</name>
  <version>0.1.0</version>
  <description>Camera bring-up and stable-frame republishing for grasp perception.</description>
  <maintainer email="kumarashutosh94952030@gmail.com">Ashtosh Kumar</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <!-- <depend>python3-transforms3d</depend> -->
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_sim</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
